2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* separator.c (remove_empty_content_arguments): Implement.

2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* api.c (parse_text): Use new function input_push_text_with_line_nos
	to keep track of line numbers (for tests).

2015-11-30  Gavin Smith  <gavinsmith0123@gmail.com>
 
	* Parsetexi/lib/Parsetexi.pm (parser): Set conf keys on parser 
	object.

2015-11-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parse_texi_text): Add function.

2015-11-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Update so works again.

	* texi2any-C.pl, texi2any-C-2.pl: Replaced, to match most
	recent revision.
	* Parsetexi/lib/Parsetexi.pm: Set 'level' value from value in 
	'extra'.
	* Match changes made in the main code on 2015-10-02 to make 
	@heading affected by @lowersections.

2015-06-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (process_remaining_on_line) <@value> Add element to 
	tree for unexpanded value.
	* api.c (element_to_perl_hash): Output 'type' as name for 
	unexpanded @value.

2015-06-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/Parsetexi.xs,
	* api.c (build_global_info): New function.
	* Parsetexi/lib/Parsetexi.pm (parse_texi_file): Fetch the 
	"global information," including the @documentencoding.

	* parser.c (global_info): New struct variable.
	* end_line.c (end_line_misc_line) <@documentencoding> Save 
	document encoding.

2015-04-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* end_line.c (end_line_starting_block): Call 
	register_command_arg.
	* parser.c (process_remaining_on_line) <command with command as 
	argument, like @itemize @bullet>: Set command_as_argument extra 
	value.

2015-04-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm (parser): Add code to receive 
	"values" configuration value.
	(parse_texi_line): First implementation.
	* Parsetexi/Parsetexi.xs (parse_string, store_value)
	(wipe_values): Expose.