@@ -1,3 +1,7 @@
+2015-12-05  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* errors.c (command_warnf, command_errorf): Implement.
+
 2015-12-01  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* separator.c (remove_empty_content_arguments): Implement.
